# rocket-metrics

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
scripts/windows/: build_and_install.ps1
src/: RocketMetricsPlugin.cpp  RocketMetricsPlugin.h  pch.h
